// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(0,30,43,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(0,30,43,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  position: relative;
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  z-index: 0;
  margin: 24px 0;
}

table .emotion-4 {
  margin: 0;
}

.emotion-5 * {
  border: 0!important;
  min-height: unset!important;
  padding: 0!important;
}

.emotion-6 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
  width: 5%;
}

.emotion-6 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  padding-right: 4px;
  color: #1C2D38;
}

.emotion-9 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
  width: 10%;
}

.emotion-9 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-12 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
  width: 15%;
}

.emotion-12 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-15 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
  width: 20%;
}

.emotion-15 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-18 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
  width: 30%;
}

.emotion-18 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-24 {
  --lg-cell-min-height: 20px;
  position: relative;
  z-index: 1;
  background-color: #FFFFFF;
  color: #1C2D38;
}

.emotion-24>:is(td, th)>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-cell-min-height);
  max-height: unset;
}

.emotion-24>:is(td, th):nth-child(1) {
  padding-left: 8px;
}

.emotion-24 :is(td, th):nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 :is(td, th):nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 :is(td, th):nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 :is(td, th):nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 :is(td, th):nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 :is(td, th):nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-25 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-25 * {
  font-size: 13px!important;
}

.emotion-25>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-25>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-25>div>span>*,
.emotion-25>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-25>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4"
      >
        <thead>
          <tr
            class="emotion-5"
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-6"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-9"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-12"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-18"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-15"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-7"
              >
                <span
                  class="emotion-8"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-24"
            role="row"
          >
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  notebook
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-25"
            >
              <div
                class="emotion-26"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-27"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  max-width: 100%;
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(0,30,43,0.3);
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-2:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-2:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(0,30,43,0.3);
}

.emotion-3 {
  overflow-x: auto;
}

.emotion-4 {
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  position: relative;
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  z-index: 0;
  margin: 24px 0;
}

table .emotion-4 {
  margin: 0;
}

.emotion-5 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  border-bottom: 3px solid;
  border-color: #E8EDEB;
}

.emotion-5 * {
  font-size: 13px;
  font-weight: 600;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  padding-right: 4px;
  color: #1C2D38;
}

.emotion-23 {
  --lg-cell-min-height: 20px;
  position: relative;
  z-index: 1;
  background-color: #FFFFFF;
  color: #1C2D38;
}

.emotion-23>:is(td, th)>[data-leafygreen-ui="td-inner-div"] {
  min-height: var(--lg-cell-min-height);
  max-height: unset;
}

.emotion-23>:is(td, th):nth-child(1) {
  padding-left: 8px;
}

.emotion-23 :is(td, th):nth-child(1)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 :is(td, th):nth-child(2)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 :is(td, th):nth-child(3)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 :is(td, th):nth-child(4)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 :is(td, th):nth-child(5)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-23 :is(td, th):nth-child(6)>div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  font-weight: 600;
  border-right: 3px solid #E8EDEB;
  background-color: #F9FBFA;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  background-color: #F9FBFA;
}

.emotion-24 * {
  font-size: 13px!important;
}

.emotion-24>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-24>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-24>div>span>*,
.emotion-24>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-24>div>span>*:last-child {
  margin-bottom: 0;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-27 {
  --lg-cell-padding-block: 10px;
  min-width: 40px;
  padding: var(--lg-cell-padding-block) 8px;
  box-sizing: border-box;
  vertical-align: baseline;
  text-align: left;
  font-size: 13px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-27 * {
  font-size: 13px!important;
}

.emotion-27>div {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-27>div>span {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-27>div>span>*,
.emotion-27>div>span p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-27>div>span>*:last-child {
  margin-bottom: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-4"
      >
        <thead>
          <tr
            class=""
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  name
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  quantity
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  size
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  status
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  tags
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-5"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                >
                  rating
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  journal
                </span>
              </div>
            </th>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  25
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  14x21,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  brown, lined
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  9
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  notebook
                </span>
              </div>
            </th>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  8
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  paper
                </span>
              </div>
            </th>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  100
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  watercolor
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  planner
                </span>
              </div>
            </th>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  75
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  22.85x30,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  2019
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-23"
            role="row"
          >
            <th
              class="emotion-24"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  postcard
                </span>
              </div>
            </th>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  45
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  10x,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  double-sided,white
                </span>
              </div>
            </td>
            <td
              class="emotion-27"
            >
              <div
                class="emotion-25"
                data-leafygreen-ui="td-inner-div"
              >
                <span
                  class="emotion-26"
                >
                  2
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
